--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,13 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText1"/>
+        android:id="@+id/editText1"
+        android:inputType="number|numberSigned|numberDecimal"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"/>
+        android:id="@+id/editText2"
+        android:inputType="number|numberSigned|numberDecimal"/>
 
     <Button
         android:layout_width="wrap_content"
